# Snake-cpp

./: CMakeLists.txt  README.md  build.bat
src/: main.cpp  snake.cpp  snake.hpp  utils.cpp  utils.hpp
